@@ -32,8 +32,8 @@ or played back on the user's desktop.
 # PLEASE DO NOT CHANGE FORMAT OF __version__ LINE (setup.py reads this)
 
 __author__    = "Thomas Perl <thp@perli.net>"
-__version__   = "0.9.0+svn20070308"
-__date__      = "2007-03-08"
+__version__   = "0.9.0+svn20070309"
+__date__      = "2007-03-09"
 __copyright__ = "Copyright (c) 2005-2007 %s. All rights reserved." % __author__
 __licence__   = "GPL"
 
