@@ -1250,7 +1250,7 @@
   <property name="visible">True</property>
   <property name="title" translatable="yes">gPodder Channel Editor</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
-  <property name="window_position">GTK_WIN_POS_CENTER</property>
+  <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
   <property name="modal">False</property>
   <property name="default_width">500</property>
   <property name="resizable">True</property>
@@ -3206,7 +3206,7 @@ you can use the usual format of the environment variables:
   <property name="visible">True</property>
   <property name="title" translatable="yes">Episode Information</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
-  <property name="window_position">GTK_WIN_POS_CENTER</property>
+  <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
   <property name="modal">True</property>
   <property name="default_width">400</property>
   <property name="resizable">True</property>
@@ -3667,7 +3667,7 @@ you can use the usual format of the environment variables:
   <property name="visible">True</property>
   <property name="title" translatable="yes">Synchronization</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
-  <property name="window_position">GTK_WIN_POS_CENTER</property>
+  <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
   <property name="modal">True</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
@@ -3895,7 +3895,7 @@ you can use the usual format of the environment variables:
   <property name="visible">True</property>
   <property name="title" translatable="yes">Select channels to subscribe to</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
-  <property name="window_position">GTK_WIN_POS_CENTER</property>
+  <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
   <property name="modal">False</property>
   <property name="default_width">500</property>
   <property name="default_height">300</property>
