@@ -1,3 +1,9 @@
+Fri,  9 Mar 2007 20:05:20 +0100 <thp@perli.net>
+        * src/gpodder/libgpodder.py: Fix sanitize_feed_url() function
+        * src/gpodder/gpodder.py: Add support for dialogs to be centered on 
+          the main gPodder window
+        * data/gpodder.glade: Make dialogs center on parent by definition ;)
+
 Thu,  8 Mar 2007 15:01:20 +0100 <thp@perli.net>
         * src/gpodder/libgpodder.py: Add support for "download after update"
         * src/gpodder/gpodder.py: Support for "download after update" setting
